--- a/convert/Base.lproj/Main.storyboard
+++ b/convert/Base.lproj/Main.storyboard
@@ -17,6 +17,8 @@
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
+                    <string key="storyboardIdentifier">PianoViewController
+</string>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -218,100 +220,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="97.8515625" y="147.65625"/>
-        </scene>
-        <!--Recorder View Controller-->
-        <scene sceneID="Itj-Bg-Aoi">
-            <objects>
-                <viewController id="03P-G0-K4B" customClass="recorderViewController" customModule="convert" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="IdW-GY-bXJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="JTh-yV-NqU"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="R5m-rI-L8M">
-                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Recorder" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o4e-Ny-3Zu">
-                                <rect key="frame" x="37" y="281" width="967" height="177"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hcB-Hv-Ffu">
-                                <rect key="frame" x="625" y="593" width="333" height="55"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
-                                <state key="normal" title="Convert to Sheet music"/>
-                                <connections>
-                                    <segue destination="tQe-at-kjF" kind="show" id="G6W-Up-OMM"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="rfs-MC-dsM"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="uyl-xS-nBh" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="822.0703125" y="969.53125"/>
-        </scene>
-        <!--Tuner-->
-        <scene sceneID="xnM-gd-Pxf">
-            <objects>
-                <viewController id="JDV-Gt-QTU" customClass="GuitarTunerViewController" customModule="convert" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Aaq-4s-Ziu"/>
-                        <viewControllerLayoutGuide type="bottom" id="cqv-Xu-84F"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="p4V-Tw-3go">
-                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Guitar Tuner" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cAv-gf-cIf">
-                                <rect key="frame" x="29" y="296" width="967" height="177"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Tuner" image="Rock Music_000000_25" id="Dd4-In-D6X"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="W5d-eO-iyw" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-872" y="1827"/>
-        </scene>
-        <!--Saved-->
-        <scene sceneID="DWI-hG-MhY">
-            <objects>
-                <viewController id="yoS-VW-1P4" customClass="SavedViewController" customModule="convert" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="ET7-Oz-Zkw"/>
-                        <viewControllerLayoutGuide type="bottom" id="u4V-Z1-rE6"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="VmX-WJ-qUv">
-                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Saved  Sheets" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2A7-Er-m6R">
-                                <rect key="frame" x="32" y="234" width="967" height="177"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Saved" image="Music Transcript_000000_25" id="JZv-XJ-vre"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="r0h-Hc-0Fy" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="106.640625" y="1827.34375"/>
+            <point key="canvasLocation" x="-198" y="308"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="VjB-9S-wkO">
@@ -326,142 +235,17 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="presentation" identifier="PianoSegue" id="84H-ve-J2h"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FZn-NV-v7b" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-64" y="3492"/>
-        </scene>
-        <!--Generated Sheet-->
-        <scene sceneID="2TS-aV-wRT">
-            <objects>
-                <viewController id="tQe-at-kjF" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Ltq-Gr-E4g"/>
-                        <viewControllerLayoutGuide type="bottom" id="jiE-MF-Df6"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="I4u-iD-e5q">
-                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="music-staff" translatesAutoresizingMaskIntoConstraints="NO" id="Zn7-QH-o3M">
-                                <rect key="frame" x="-9" y="47" width="1066" height="222"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="music-staff" translatesAutoresizingMaskIntoConstraints="NO" id="364-Sh-cev">
-                                <rect key="frame" x="-9" y="227" width="1066" height="222"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="music-staff" translatesAutoresizingMaskIntoConstraints="NO" id="Ifb-7U-Q9o">
-                                <rect key="frame" x="-11" y="410" width="1066" height="222"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="music-staff" translatesAutoresizingMaskIntoConstraints="NO" id="M9I-T5-1nR">
-                                <rect key="frame" x="-12" y="599" width="1066" height="222"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <toolbarItems/>
-                    <navigationItem key="navigationItem" title="Generated Sheet" id="CLZ-6Y-DJG">
-                        <barButtonItem key="backBarButtonItem" title="Back" id="48F-bF-UbG"/>
-                        <barButtonItem key="rightBarButtonItem" style="plain" id="dTQ-bZ-qw4">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="A4e-CX-uAt">
-                                <rect key="frame" x="132" y="7" width="227" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
-                                <state key="normal" title="Save">
-                                    <color key="titleColor" red="0.00045323109949999999" green="0.2491315603" blue="0.35732567310000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
-                            </button>
-                        </barButtonItem>
-                    </navigationItem>
-                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="byQ-D8-Gxs" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1600" y="970"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="R3g-7U-lB8">
-            <objects>
-                <viewController id="YaU-GA-UEi" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="nej-Fe-6e2"/>
-                        <viewControllerLayoutGuide type="bottom" id="VbF-ke-zAe"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="6Ww-CE-HF4">
-                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="maxresdefault" translatesAutoresizingMaskIntoConstraints="NO" id="385-zU-7C6">
-                                <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YgW-l2-DAb">
-                                <rect key="frame" x="370" y="540" width="320" height="78"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Get started">
-                                    <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="pEg-UE-YsH" kind="presentation" id="Dox-EP-OYq"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="zOH-n6-Gsl" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1642.3828125" y="513.28125"/>
-        </scene>
-        <!--Tab Bar Controller-->
-        <scene sceneID="YPs-NK-vzD">
-            <objects>
-                <tabBarController id="pEg-UE-YsH" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="geH-Mp-1Tp">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    </tabBar>
-                    <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="1Zn-kE-lhM"/>
-                        <segue destination="QT3-9y-ns4" kind="relationship" relationship="viewControllers" id="bDy-0R-LNn"/>
-                        <segue destination="yoS-VW-1P4" kind="relationship" relationship="viewControllers" id="JA4-Ke-vh0"/>
-                        <segue destination="JDV-Gt-QTU" kind="relationship" relationship="viewControllers" id="ddu-gy-6Ob"/>
-                    </connections>
-                </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="hnM-wq-QrD" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-872" y="502"/>
-        </scene>
-        <!--Record-->
-        <scene sceneID="wiv-oT-i42">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="QT3-9y-ns4" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Record" image="Microphone_000000_25" id="WPH-vR-Pzo"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="92l-fK-NRq">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="03P-G0-K4B" kind="relationship" relationship="rootViewController" id="EFj-Vs-ehx"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="HJl-Zx-n19" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="97.8515625" y="969.53125"/>
+            <point key="canvasLocation" x="-1090" y="308"/>
         </scene>
     </scenes>
     <resources>
         <image name="Classic Music_000000_25" width="25" height="25"/>
-        <image name="Microphone_000000_25" width="25" height="25"/>
-        <image name="Music Transcript_000000_25" width="25" height="25"/>
-        <image name="Rock Music_000000_25" width="25" height="25"/>
-        <image name="maxresdefault" width="1920" height="1080"/>
         <image name="music-staff" width="700" height="163"/>
     </resources>
     <color key="tintColor" red="0.00045323109949999999" green="0.2491315603" blue="0.35732567310000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
